HTML layout added

--- a/index.html
+++ b/index.html
@@ -8,6 +8,20 @@
     <link rel="stylesheet" href="./css/styles.css">
 </head>
 <body>
+    <div class="container">
+        <div class="logo"><a href="/">SnapShot</a></div>
+
+        <div class="headline"><h1>WE'RE COMING SOON</h1></div>
+        <div class="crosshead"><p>Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+            Modi quibusdam cumque dolor rem voluptatem ratione optio! 
+            Consequatur nemo saepe fugit, numquam ipsa quisquam, veniam id odio autem quidem repudiandae minus.</p>
+        </div>
+
+        <input type="email" name="email-input" id="email" placeholder="Email Address...">
+        <button type="submit">&gt</button>
+
+        <div class="model-image"><img src="./images/ginger.png" alt="Model Image"></div>
+    </div>
     
 </body>
 </html>
